--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -14,6 +14,7 @@
     "africastalking": "^0.7.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
